[package]
name = "Bloodhound"
version = "0.1.0"
edition = "2024"
description = "Proof of skill project, all logic is contained in lib.rs and main.rs serves for the executable"
repository = "https://github.com/thomas-lysens/Bloodhound"

[dependencies]
pcap = "2.4.0"
tokio = {  version = "1.48.0", features = [ "full" ] }

[lib]
name = "bloodhound"
path = "src/lib.rs"

[[bin]]
name = "bloodhound"
path = "src/main.rs"
